// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  display: block;
  vertical-align: middle;
  background-color: transparent;
  border: none;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  outline: none;
  margin: 0;
  padding: 0;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
  border-bottom-color: #f03e3e;
  font-size: 16px;
}

.c0:hover {
  border-bottom-color: #f03e3e;
}

.c0:focus {
  border-bottom-color: #f03e3e;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #f03e3e;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: auto;
  width: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <input
    class="c0"
    font-size="1"
    rows="3"
    type="text"
  />
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        Some error
      </div>
    </div>
    <div
      class="c4"
      width="16"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input renders with onChange handler 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  display: block;
  vertical-align: middle;
  background-color: transparent;
  border: none;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  outline: none;
  margin: 0;
  padding: 0;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
  border-bottom-color: #f1f3f5;
  font-size: 16px;
}

.c0:hover {
  border-bottom-color: #f1f3f5;
}

.c0:focus {
  border-bottom-color: #0588cb;
}

<div>
  <input
    class="c0"
    data-testid="test-input"
    font-size="1"
    rows="3"
    type="text"
  />
</div>
`;

exports[`Input renders with prop fontSize 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  display: block;
  vertical-align: middle;
  background-color: transparent;
  border: none;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  outline: none;
  margin: 0;
  padding: 0;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
  border-bottom-color: #f1f3f5;
  font-size: 36px;
}

.c0:hover {
  border-bottom-color: #f1f3f5;
}

.c0:focus {
  border-bottom-color: #0588cb;
}

<div>
  <input
    class="c0"
    font-size="4"
    rows="3"
    type="text"
  />
</div>
`;

exports[`Input renders with prop rows 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  display: block;
  vertical-align: middle;
  background-color: transparent;
  border: none;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  outline: none;
  margin: 0;
  padding: 0;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
  border-bottom-color: #f1f3f5;
  font-size: 16px;
}

.c0:hover {
  border-bottom-color: #f1f3f5;
}

.c0:focus {
  border-bottom-color: #0588cb;
}

<div>
  <textarea
    class="c0"
    font-size="1"
    rows="4"
    type="textarea"
  />
</div>
`;

exports[`Input renders with prop type 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  display: block;
  vertical-align: middle;
  background-color: transparent;
  border: none;
  border-radius: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  outline: none;
  margin: 0;
  padding: 0;
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
  border-bottom-color: #f1f3f5;
  font-size: 16px;
}

.c0:hover {
  border-bottom-color: #f1f3f5;
}

.c0:focus {
  border-bottom-color: #0588cb;
}

<div>
  <input
    class="c0"
    font-size="1"
    rows="3"
    type="number"
  />
</div>
`;
